<resources>
    <string name="app_name">
        Material Components Demo
    </string>
    <string name="search_component_hint">
        Search material component
    </string>
    <string name="action_search_title">
        Search component
    </string>
    <string name="banner_description">
        Material Component Banner
    </string>
    <string name="app_bar_bottom_title">
        App bar bottom
    </string>
    <string name="app_bar_bottom_span_title">
        <![CDATA[
            <p>
                <h1>
                    App bars: bottom
                </h1>
            </p>
            <p>
                A bottom app bar displays navigation and key actions at the bottom of mobile screens.
            </p>
        ]]>
    </string>
    <string name="app_bar_bottom_span_usage">
        <![CDATA[
            <p>
                <h3>
                    Usage
                </h3>
            </p>
            <p>
                Bottom app bars provide access to a bottom navigation drawer and up to four actions, including the floating action button.
            </p>
        ]]>
    </string>
    <string name="app_bar_bottom_span_when_to_use">
        <![CDATA[
            <p>
                <h3>
                    When to use
                </h3>
            </p>
            <p>
                Bottom app bars should be used for:
                <ul>
                    <li>
                        Mobile devices only
                    <li>
                        Access to a bottom navigation drawer
                    <li>
                        Screens with two to five actions
                </ul>
                Bottom app bars shouldn\'t be used for:
                <ul>
                    <li>
                        Apps with a bottom navigation bar
                    <li>
                        Screens with one or no actions
                </ul>
            </p>
        ]]>
    </string>
    <string name="app_bar_bottom_span_anatomy">
        <![CDATA[
            <p>
                <h3>
                    Anatomy
                </h3>
            </p>
            <p>
                Bottom app bars can contain actions that apply to the context of the current screen. They include a navigation menu control on the far left and a floating action button (when one is present). If included in a bottom app bar, an overflow menu control is placed at the end of other actions.
            </p>
        ]]>
    </string>
    <string name="app_bar_bottom_span_positioning">
        <![CDATA[
            <p>
                <h3>
                    Positioning
                </h3>
            </p>
            <p>
                Bottom app bars have three different layouts based on the presence of a FAB and its position in the bar. These layouts dictate the number of actions that can be included in the bar.
            </p>
        ]]>
    </string>
    <string name="app_bar_bottom_press_floating">
        A floating action button (FAB) performs the primary, or most common, action on a screen. It appears in front of all screen content, typically as a circular shape with an icon in its center. FABs come in three types:"regular, mini, and extended.
    </string>
    <string name="app_bar_bottom_press_more_information">
        Have press more information
    </string>
    <string name="app_bar_bottom_press_star">
        Have press star
    </string>
    <string name="app_bar_bottom_star">
        Star
    </string>
    <string name="app_bar_bottom_more_info">
        Information
    </string>
    <string name="app_bar_bottom_content_description_more">
        content descriptor more
    </string>
    <string name="app_bar_bottom_content_description_star">
        content descriptor star
    </string>
    <string name="app_bar_bottom_image_description_music">
        content descriptor music
    </string>
    <string name="app_bar_bottom_image_description_news">
        content descriptor news
    </string>
    <string name="app_bar_bottom_image_description_place">
        content descriptor place
    </string>
    <string name="app_bar_top_title">
        App bars: top
    </string>
    <string name="app_bar_top_span_title">
        <![CDATA[
            <p>
                <h1>
                    App     bars: top
                </h1>
            </p>
            <p>
                The top app bar displays information and actions relating to the current screen.
            </p>
        ]]>
    </string>
    <string name="app_bar_top_span_usage">
        <![CDATA[
            <p>
                <h3>
                    Usage
                </h3>
            </p>
            <p>
                The top app bar provides content and actions related to the current screen. It’s used for branding, screen titles, navigation, and actions.
            </p>
        ]]>
    </string>
    <string name="app_bar_top_span_anatomy">
        <![CDATA[
            <p>
                <h3>
                    Anatomy
                </h3>
            </p>
            <p>
                The recommended placement of elements in a top app bar for left-to-right languages is:
            <lu>
                <li>
                    Place navigation on the far left
                <li>
                    Place any titles to the right of navigation
                <li>
                    Place contextual actions to the right of navigation
                <li>
                    Place an overflow menu (if used) to the far right
            </lu>
            For right-to-left languages, placement positions should be flipped.
            </p>
        ]]>
    </string>
    <string name="app_bar_top_span_behavior">
		<![CDATA[
            <p>
                <h3>
                    Behavior
                </h3>
            </p>
            <p>
                Upon scrolling, the top app bar can remain in place, or transform in the following ways:
                <lu>
                    <li>
                        Scrolling upward hides the top app bar
                    <li>
                        Scrolling downward reveals the top app bar
                </lu>
                When the top app bar scrolls, its elevation above other elements becomes apparent.
            </p>
        ]]>
    </string>
    <string name="app_bar_top_image_descriptor_title">
        Title
    </string>
    <string name="app_bar_top_image_descriptor_behavior">
        Behavior
    </string>
    <string name="backdrop_title">
        Backdrop
    </string>
    <string name="backdrop_span_title">
		<![CDATA[
            <p>
                <h1>
                    Backdrop
                </h1>
            </p>
            <p>
                A backdrop appears behind all other surfaces in an app, displaying contextual and actionable content.
            </p>
        ]]>
    </string>
    <string name="backdrop_span_usage">
		<![CDATA[
            <p>
                <h3>
                    Usage
				</h3>
            </p>
            <p>
                A backdrop is composed of two surfaces: a back layer and a front layer. The back layer displays actions and context, and these control and inform the front layer\'s content.
            </p>
        ]]>
    </string>
    <string name="backdrop_span_anatomy">
		<![CDATA[
            <p>
                <h3>
                    Anatomy
				</h3>
            </p>
            <p>
                A backdrop consists of a back layer, a front layer, and an optional subheader. Either the back layer or the front layer can be active at a time.
            </p>
            <p>
                <h5>
                    Active front layer
				</h5>
            </p>
            <p>
                The front layer always appears in front of the back layer. It is displayed at full width and holds primary content.
            </p>
            <p>
                <h5>
                    Active back layer
				</h5>
            </p>
            <p>
                The back layer appears at the lowest elevation (0dp) in an app, filling the entire background. It holds actionable content that is relevant to the front layer.
            </p>
        ]]>
    </string>
    <string name="backdrop_span_behavior">
		<![CDATA[
            <p>
                 <h3>
                    Behavior
				</h3>
            </p>
            <p>
                To reveal the back layer, interact with any actions that appear on it.
            </p>
            <p>
                <h5>
                    Concealing the back layer
				</h5>
            </p>
            <p>
                The back layer can be concealed by either interacting with the front layer or tapping a conceal affordance on either layer.
            </p>
            <p>
                  <h5>
                    Content scrolling
				</h5>
            </p>
            <p>
                Content on the front layer has different scrolling behaviors (and restrictions) than content on the back layer.
            </p>
        ]]>
    </string>
    <string name="backdrop_image_descriptor_anatomy">
        Anatomy
    </string>
    <string name="datatable_sample_elements_interactive_description">
        Interactive elements sample
	</string>
    <string name="datatable_sample_columns_heightpadding_description">
        Height and padding sample
	</string>
    <string name="datatable_sample_columns_padding_description">
        Padding sample
	</string>
    <string name="datatable_sample_sorting_description">
        Sorting sample
	</string>
    <string name="datatable_sample_rowcheck_description">
        Row checkbox sample
	</string>
    <string name="datatable_sample_focus_description">
        Focus sample
	</string>
    <string name="datatable_sample_menu_description">
        Inline menus sample
	</string>
    <string name="menu_headset">
        Headset
	</string>
    <string name="menu_star">
        Star
	</string>
    <string name="menu_music_note">
        Music note
	</string>
    <string name="menu_info">
        Info
	</string>
    <string name="navigation_drawer_navigation_header">
        Navigation Header
	</string>
    <string name="navigation_drawer_drawer_title">
        Navigation Drawer Title
	</string>
    <string name="navigation_drawer_drawer_subtitle">
        Navigation Drawer Subtitle
	</string>
    <string name="navigation_drawer_option_1">
        Option 1
	</string>
    <string name="navigation_drawer_option_2">
        Option 2
	</string>
    <string name="navigation_drawer_option_3">
        Option 3
	</string>
    <string name="navigation_drawer_navigation_home">
        Home
	</string>
    <string name="navigation_drawer_navigation_standard_drawer">
        Standard Drawer
	</string>
    <string name="navigation_drawer_navigation_bottom_drawer">
        Bottom Drawer
	</string>
    <string name="selection_switch_text">
        Setting One
	</string>
    <string name="selection_checkbox_text_one">
        One
	</string>
    <string name="selection_checkbox_text_two">
        Two
	</string>
    <string name="selection_checkbox_text_three">
        Three
	</string>
    <string name="selection_radio_button_text_one">
        One
	</string>
    <string name="selection_radio_button_text_two">
        Two
	</string>
    <string name="selection_radio_button_text_three">
        Three
	</string>
    <string name="sheet_bottom_add_to_favourites">
        Add To Favourites
	</string>
    <string name="sheet_bottom_upload_to_drive">
        Upload To Drive
	</string>
    <string name="sheet_bottom_save_to_device">
        Save To Device
	</string>
    <string name="sheet_bottom_favourites_description">
        Add To Favourites Icon
	</string>
    <string name="sheet_bottom_drive_description">
        Upload To Drive Icon
	</string>
    <string name="sheet_bottom_save_description">
        Save To Device Icon
	</string>
</resources>