<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.xeroxparc.materialcomponentsdemo.ui.component.navigationdrawer.NavigationDrawerHomeFragment"
        android:label="@string/navigation_drawer_navigation_home"
        tools:layout="@layout/fragment_navigation_drawer_home" />

    <fragment
        android:id="@+id/navigation_standard_drawer"
        android:name="com.xeroxparc.materialcomponentsdemo.ui.component.navigationdrawer.NavigationDrawerStandardDrawerFragment"
        android:label="@string/navigation_drawer_navigation_standard_drawer"
        tools:layout="@layout/fragment_navigation_drawer_standard_drawer" />

    <fragment
        android:id="@+id/navigation_bottom_drawer"
        android:name="com.xeroxparc.materialcomponentsdemo.ui.component.navigationdrawer.NavigationDrawerBottomDrawerFragment"
        android:label="@string/navigation_drawer_navigation_bottom_drawer"
        tools:layout="@layout/fragment_navigation_drawer_bottom_drawer" />
</navigation>