<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin_medium"
    android:paddingTop="@dimen/margin_medium"
    android:paddingEnd="@dimen/margin_medium"
    android:paddingBottom="@dimen/margin_medium"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <ImageView
        android:id="@+id/image_view_drawer_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/navigation_drawer_navigation_header"
        android:paddingTop="@dimen/margin_medium"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_medium"
        android:text="@string/navigation_drawer_drawer_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigation_drawer_drawer_subtitle" />
</LinearLayout>