<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/app_bar_container"
        layout="@layout/app_bar_demo"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="vertical">

            <WebView
                android:id="@+id/web_view_span_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"/>

            <WebView
                android:id="@+id/web_view_span_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"/>

            <WebView
                android:id="@+id/web_view_span_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/selection_switch_text"
                app:useMaterialThemeColors="true"
                android:checked="false"/>

            <WebView
                android:id="@+id/web_view_span_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/selection_checkbox_text_one"
                app:useMaterialThemeColors="false" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/selection_checkbox_text_two"
                app:useMaterialThemeColors="false" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/selection_checkbox_text_three"
                app:useMaterialThemeColors="false" />

            <WebView
                android:id="@+id/web_view_span_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:paddingBottom="@dimen/margin_large">

                <RadioButton
                    android:id="@+id/radio_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selection_radio_button_text_one"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selection_radio_button_text_two"
                    android:checked="false"/>

                <RadioButton
                    android:id="@+id/radio_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selection_radio_button_text_three"
                    android:checked="false"/>

            </RadioGroup>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
